# prosewrite

./: .gitignore  AGENTS.md  README.md  config.toml  pyproject.toml
prosewrite/: approval.py  client.py  config.py  display.py  exceptions.py  main.py  pipeline.py  reviewer.py  state.py
prosewrite/prompts/: stage0.txt  stage0_improve.txt  stage1.txt  stage2.txt  stage3.txt  stage3_index_task.txt  stage3_profile_task.txt  stage4.txt  stage4_chapter_list_review.txt  stage4_list_task.txt  stage4_outline_review.txt  stage4_outline_task.txt  stage5_reviewer.txt  stage5_revision.txt  stage5_scene_brief.txt  stage5_writer.txt  stage6_continuity.txt  system_persona.txt
prosewrite/stages/: __init__.py  stage0_seed.py  stage1_bible.py  stage2_world.py  stage3_characters.py  stage4_outlines.py  stage5_chapters.py  stage6_batch_review.py  stage6_export.py  stage7_export.py
tests/: test_approval.py  test_client.py  test_config.py  test_state.py
